[package]
name = "novel_search"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
rand = "0.9.0-beta.1"
