[package]
name = "novel_search"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A CLI-tool to browse books from the Open Library API"
homepage = "https://github.com/SpeedyGo55/novel_search"
repository = "https://github.com/SpeedyGo55/novel_search"
authors = ["SpeedyGo55 <speedygo55@outlook.com>"]
readme = "README.md"
keywords = ["novel", "search", "cli", "open-library", "binary"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
rand = "0.9.0-beta.1"
